--- a/requirements.txt
+++ b/requirements.txt
@@ -2,20 +2,28 @@ asgiref==3.3.1
 beautifulsoup4==4.9.3
 certifi==2020.12.5
 chardet==3.0.4
+click==7.1.2
 Deprecated==1.2.10
 Django==3.1.4
+django-ckeditor==6.0.0
+django-js-asset==1.2.2
+django-tinymce==3.2.0
 idna==2.10
+joblib==1.0.0
 Markdown==3.3.3
 markdown2==2.3.10
+nltk==3.5
 numpy==1.19.4
 Pillow==8.0.1
 PyGithub==1.54
 PyJWT==1.7.1
 python-decouple==3.3
 pytz==2020.4
+regex==2020.11.13
 requests==2.24.0
 soupsieve==2.1
 sqlparse==0.4.1
+tqdm==4.55.2
 urllib3==1.25.11
 wget==3.2
 wrapt==1.12.1
